@startuml
abstract class Menu {
    - nombrePlato: String
    - valorInicial: double
    + <<abstract>> calcularValorMenu(): double
    + toString(): String
}

class MenuCarta {
    - guarnicion: double
    - bebida: double
    - porcServicio: double
    + calcularValorMenu(): double
}

class MenuDia {
    - postre: double
    - bebida: double
    + calcularValorMenu(): double
}

class MenuNinos {
    - helado: double
    - pastel: double
    + calcularValorMenu(): double
}

class MenuEconomico {
    - descuento: double
    + calcularValorMenu(): double
}

class Cuenta {
    - cliente: String
    - menus: List<Menu>
    + calcularSubtotal(): double
    + calcularTotal(): double
    + toString(): String
}

class P2MenuEjecutor {
    + main(args: String[]): void
}

Menu <|-- MenuCarta
Menu <|-- MenuDia
Menu <|-- MenuNinos
Menu <|-- MenuEconomico
Cuenta --> "*" Menu
P2MenuEjecutor ---> Menu
@enduml